fix spacing in sponsors

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -347,6 +347,10 @@ li a {
     max-height: 20vh;
 }
 
+.silverSponsor, .platformSponsor {
+    padding-bottom: 2vh;
+} 
+
 .temboo, .gitlab {
     top: -4vh;
 }
